<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceTitleMediumEmphasized"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/user_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.LargeIncreased">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/action_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="16dp"
                        android:text="@string/settings"
                        android:textAppearance="?attr/textAppearanceBodyLargeEmphasized"
                        android:textColor="?attr/colorOnSurface"
                        app:drawableStartCompat="@drawable/ic_settings"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="40dp"
                        app:dividerColor="?attr/colorOutlineVariant" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/action_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="16dp"
                        android:text="@string/about"
                        android:textAppearance="?attr/textAppearanceBodyLargeEmphasized"
                        android:textColor="?attr/colorOnSurface"
                        app:drawableStartCompat="@drawable/group"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="40dp"
                        app:dividerColor="?attr/colorOutlineVariant" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/action_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="16dp"
                        android:text="@string/report_error_title"
                        android:textAppearance="?attr/textAppearanceBodyLargeEmphasized"
                        android:textColor="?attr/colorOnSurface"
                        app:drawableStartCompat="@drawable/help"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</LinearLayout>